# rung

./: .gitignore  ARCHITECTURE.md  CONVERGENCE.md  Cargo.toml  README.md  RUNG-RUST.md  SPEC.md
.github/workflows/: ci.yml
.gl/: schema.json
.meta/: README.md
docs/: EDGES.md  JUDGMENTS.md  RUNG-CT.md  RUNG-RS.md  RUNG-RUST.md  SPEC.md  questions.md
docs/.archive/: 2026-07-18_HANDOFF_verbs-are-arrows.md  NOTES.md  THREE-VOICES.md
docs/questions/: INTAKE.md  README.md  _map.md  _reach.py
docs/questions/blocked/: q3-true-no-drop-linearity.md
docs/questions/open/: q1-transition-body-correctness.md  q10-fractal-registry-hierarchy.md  q4-composition-nested-ladders.md  q5-fork-join-concurrency.md  q6-genericity.md  q8-async-driver.md  q9-the-dependency-superstructure.md
docs/questions/parked/: q2-cross-crate-provenance.md
docs/questions/resolved/: q10-fractal-registry-hierarchy.md  q7-effectful-bodies-which-monad.md  q9-the-dependency-superstructure.md
docs/questions/resolved/_evidence/: kleisli-review-2-prism.md  q10-review-1-fibrations.md  q10-review-2-optics.md  q7-kleisli-review-1-dagger.md  q9-review-1-fibration.md  q9-review-2-opfibration.md
python-poc/examples/: metric_opt.py
python-poc/rung/: checker.py
python-poc/tests/: test_linearity.py
rung/: Cargo.toml  __init__.py  ast.py  interpreter.py
rung-macro/: Cargo.toml
rung-macro/src/: lib.rs
rung/examples/: metric_opt.rs  question_resolution.rs
rung/src/: lib.rs
rung/tests/: attention_ledger.rs  compile_pass.rs  end_to_end.rs
rust-example/: Cargo.toml
rust-example/src/: main.rs
