[package]
name = "rung"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rung-macro = { path = "../rung-macro" }

[dev-dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"